# Parallel-Programmeren-project-Olivier

./: API.rst  AUTHORS.rst  HISTORY.rst  LICENSE  Parallel Programmeren presentatie.pptx  README.rst  micc.json  parallel_programmeren_project_olivier.py  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst
parallel_programmeren_project_olivier/: Atoom.py  LJ.py  LijstVanAtomen.py  VolledigeRuimte.py  __init__.py  final.py  lijst_van_atomen.py  lj.py  parallel_programmeren_project_olivier.py  parallelv1.py
parallel_programmeren_project_olivier/f2py_lijstvanatomen/: lijstvanatomen.f90  lijstvanatomen.rst
parallel_programmeren_project_olivier/f2py_rngfortran/: rngfortran.f90  rngfortran.rst
tests/: __init__.py  test_parallel_programmeren_project_olivier.py
